# std-linear-algebra-simd

./: CMakeLists.txt  README.md  conanfile.py
.conan/: build.py
.conan/test_package/: CMakeLists.txt
cmake/: Documentation.cmake  linear_algebra_simd-config.cmake.in
include/: linear_algebra_simd.hpp  matrix_simd.hpp  quaternion_simd.hpp  vector_simd.hpp
src/: linear_algebra_simd.tests.cpp
